--- a/logstyles.css
+++ b/logstyles.css
@@ -40,16 +40,17 @@ body
     color: black;
 }
 .wrapper{
-    align-items: center;
+    position: relative;
+   
     width: 400px;
-    height: 370px;
+    height: 450px;
     background: transparent;
     border: 2px solid rgba(255,255, 255, .5);
     border-radius: 20px;
     backdrop-filter:blur(20px);
     box-shadow: 0 0 30px rgba(0, 0,0, .5);
     display: flex;
-    justify-content: center;
+    justify-content:space-around;
     overflow: hidden;
     transform: scale(0);
     transition:height .2s ease;
@@ -80,4 +81,87 @@ body
     text-decoration:none;
    
 }
+.inputbox{
+    position: relative;
+    width: 120%;
+    height: 50px;
+    border-bottom: 2px solid #162938;
+    margin:30px 0 ;
 
+}
+.inputbox label{
+    position:absolute;
+    top:50%;
+    left:2px ;
+    transform: translateY(-50%);
+    font-size: 1em;
+    color: #1d1e1f;
+    font-weight: 500;
+    pointer-events: none;
+    top: -1px;
+}
+
+
+.inputbox input{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+}
+@media(max-width:770px)
+ {
+    .topichead{
+        position:absolute;
+        padding-top: 123px;
+        margin-left: auto;
+        padding-left: 5%;
+      color:aliceblue;
+      font-size:35px;
+      
+      
+    }
+    .topichead2{
+        margin-left:150px;
+        color:burlywood;
+        text-decoration: peru;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      
+    }
+    .log{
+        width:200px;
+        height:50px;
+        background:transparent;
+        border: 2px solid #fff;
+        outline: none;
+        border-radius: 10px;
+       
+        cursor: pointer;
+        font-size: 1.1em;
+        color: #fff;
+        font-weight: 500;
+        margin-left: 50%;
+        margin-top: 300px;
+        
+        
+    }
+    .wrapper{
+        position: relative;
+       
+        width: 360px;
+        height: 450px;
+        background: transparent;
+        border: 2px solid rgba(255,255, 255, .5);
+        border-radius: 20px;
+        backdrop-filter:blur(20px);
+        box-shadow: 0 0 30px rgba(0, 0,0, .5);
+        display: flex;
+        justify-content:space-around;
+        overflow: hidden;
+        transform: scale(0);
+        transition:height .2s ease;
+        margin-left: 10%;
+        margin-top: -250px;
+    
+    
+}
