--- a/page1styles.css
+++ b/page1styles.css
@@ -17,7 +17,7 @@ body{
     display: flex;
     align-items: center;
     border-radius: 60px;
-    padding: 0px 20px;
+    height: 35px;
     margin-top: 5%;
 
 }
@@ -35,16 +35,16 @@ body{
     color: bisque;
 }
 .searchbar button img{
-    width: 30px;
-   
+    width: 10px;
+ 
    
 
 }
 .searchbar button{
     border:0;
     border-radius: 50%;
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     cursor: pointer;
     
     
@@ -93,34 +93,105 @@ h1{
 
 
 }
-.btn{
-    color:#fff;
-    border: none;
-    outline: none;
-    font-size: 17px;
-    margin-top: 8px;
-    padding: 6px 15px;
-    background: #333;
-    border-radius:5px ;
-    display: inline-block;
+header {
+	background-color: #333;
+	color: #fff;
+}
+
+header h1 {
+	margin: 0;
+	padding: 20px;
+	font-size: 2rem;
+}
+
+nav ul {
+	margin: 0;
+	padding: 10px;
+	list-style: none;
+	display: flex;
+}
+
+nav li {
+	margin-right: 20px;
+}
+
+nav a {
+	color: #fff;
+	text-decoration: none;
+	padding: 10px;
+}
+
+nav a:hover {
+	background-color: #fff;
+	color: #333;
+}
+.sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  .sidebar a {
+    padding: 8px 8px 8px 32px;
     text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidebar a:hover {
+    color: #f1f1f1;
+  }
+  
+  .sidebar .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  
+  .openbtn {
+    font-size: 20px;
+    cursor: pointer;
+    background-color: #333;
+    color: white;
+    padding: 10px ;
+    border: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  
+  .openbtn:hover {
+    background-color: #444;
+  }
+  
+body {
+	font-family: Arial, sans-serif;
+	font-size: 16px;
+	line-height: 1.5;
+	margin: 0;
+	padding: 0;
 }
-.btn:hover{
-    letter-spacing: 1px;
 
-}
-.btn:hover{
-    transform: scale(1.03);
-    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3);
-}
-@media(max-width:770px)
-{
-    .subjectwrapper{
-        padding: 20px;
-        
-    }
+  #main {
+    transition: margin-left .5s;
+    padding: 16px;
+  }
+  @media screen and (max-height: 450px) {
+    .sidebar {padding-top: 15px;}
+    .sidebar a {font-size: 18px;}
+  }
 
-}
 
 
 
