--- a/page3styles.css
+++ b/page3styles.css
@@ -1,10 +1,97 @@
-body{
-    background: url('download (1).jpg')no-repeat;
-    background-size:30%;
-    
-    
-}
+
 .open-profile{
     cursor: pointer;
 
 }
+*{
+    
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+    
+    
+}
+
+.tablestyle {
+     width: 100%;
+     border-collapse: collapse
+     ;
+     margin-top: 7%;
+}
+.tablestyle thead{
+    background-color: #710000cb;
+
+}
+.tablestyle thead tr th{
+    font-size: 14px;
+    font-weight: medium;
+    letter-spacing: 0.35px;
+    color:#FFFFFF;
+    opacity: 1;
+    padding: 12px;
+    vertical-align: top;
+    border: 1 px solid#dee2e685;
+
+
+}
+.tablestyle tbody tr td  {
+    font-size: 14px;
+    letter-spacing: 0.35px;
+    font-weight: normal;
+    color: #000000;
+    background-color: #7a7a7ac3;
+    padding: 8px;
+    text-align: center;
+    border: 1px solid #dee2e685;
+}
+.tablestyle tbody tr td .tablebtn{
+    width:130px;
+    text-decoration: none;
+    line-height: 35px;
+    display: inline-block;
+    background-color: #ff1046;
+    font-weight:medium;
+    color: #FFFFFF;
+    text-align: center;
+   vertical-align: middle;
+    user-select: none;
+    border: 1px solid transparent;
+    font-size: 14px;
+    opacity: 1;
+}
+
+@media(max-width:700px)
+{
+    .tablestyle thead{
+        display: none;
+
+        
+    }
+    .tablestyle, .tablestyle tbody ,.tablestyle tr,.tablestyle td {
+        display: block;
+        width: 100%;
+    }
+    .tablestyle tr{
+        margin-bottom: 15px;
+
+    }
+    .tablestyle tbody tr td{
+         text-align: right;
+         padding-left: 50%;
+        position: relative;
+    }
+    .tablestyle td::before{
+        content: attr(data-label);
+        position: absolute;
+        left: 0;
+        width: 50%; 
+        padding-left:15px ;
+        font-weight: 600;
+        font-size: 14px;
+        text-align: left;
+
+    }
+   }
+
+
+
