--- a/page3styles.css
+++ b/page3styles.css
@@ -45,12 +45,12 @@
     text-align: center;
     border: 1px solid #dee2e685;
 }
-/* .tablestyle tbody tr td .tablebtn{
+.tablestyle tbody tr td .tablebtn{
     width:130px;
     text-decoration: none;
     line-height: 35px;
     display: inline-block;
-    background-color: #ff1046;
+    background-color: rgb(236, 23, 23);
     font-weight:medium;
     color: #FFFFFF;
     text-align: center;
@@ -59,7 +59,7 @@
     border: 1px solid transparent;
     font-size: 14px;
     opacity: 1;
-} */
+}
 .tablestyle tbody tr td .tablebtn1{
   width:130px;
   text-decoration: none;
