--- a/adminviewbooks.css
+++ b/adminviewbooks.css
@@ -45,11 +45,14 @@
     border: 1px solid #0b085a;
 }
 .tablestyle tbody tr td .tablebtn{
-    width:130px;
+  position: absolute;
+  top: 27.5%;
+    width:30px;
+    height: 30px;
     text-decoration: none;
     line-height: 35px;
     display: inline-block;
-    background: var(--blue);
+    background: rgb(7, 111, 37);
     font-weight:medium;
     color: #ededed;
     text-align: center;
@@ -58,7 +61,152 @@
     border: 1px solid transparent;
     font-size: 14px;
     opacity: 1;
+    cursor: pointer;
 }
+.tablestyle tbody tr td .tablebtn2{
+  position: absolute;
+  top: 31.3%;
+  width:30px;
+  height: 30px;
+  text-decoration: none;
+  line-height: 35px;
+  display: inline-block;
+  background: rgb(223, 158, 30);
+  font-weight:medium;
+  color: #ededed;
+  text-align: center;
+ vertical-align: middle;
+  user-select: none;
+  border: 1px solid transparent;
+  font-size: 14px;
+  opacity: 1;
+  cursor: pointer;
+}
+.tablestyle tbody tr td .tablebtn3{
+  position: absolute;
+  top: 35.3%;
+  width:30px;
+  height: 30px;
+  text-decoration: none;
+  line-height: 35px;
+  display: inline-block;
+  background: rgb(223, 40, 30);
+  font-weight:medium;
+  color: #ededed;
+  text-align: center;
+ vertical-align: middle;
+  user-select: none;
+  border: 1px solid transparent;
+  font-size: 14px;
+  opacity: 1;
+  cursor: pointer;
+}
+.tablestyle tbody tr td ,.tablebtn3 ion-icon{
+  font-size: 1.3rem;
+}
+.tablestyle tbody tr td ,.tablebtn ion-icon{
+  font-size: 1.3rem;
+}
+.tablestyle tbody tr td ,.tablebtn2 ion-icon{
+  font-size: 1.3rem;
+}
+/* popup form */
+h2{ 
+  position: absolute;
+  top: 50px;
+  left: 260px;
+  font-size: 26px;
+  font-weight: 600;
+  text-align: left;
+  color: #2f4f4f;
+  padding-bottom: 8px;
+  border-bottom: 1px solid silver;
+  
+}
+.content{
+  position: absolute;
+  top: 100px;
+  left: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 20px 0;
+  max-width: 650px;
+  padding: 28px;
+  margin: 0 28px;
+  box-shadow: 0 15px 20px #ABB2B9;
+}
+
+
+.inputbox
+{
+  display: flex;
+  flex-wrap: wrap;
+  width: 50%;
+  padding-bottom: 15px;
+}
+.inputbox:nth-child(2n)
+{
+  justify-content: end;
+
+}
+.inputbox label{
+  width: 95%;
+  color: #2f4f4f;
+  font-weight: bold;
+  margin: 5px 0;
+
+}
+.inputbox input{
+  height: 40px;
+  width: 95%;
+  padding: 0 10px;
+  border-radius: 5px;
+  border: 1px solid#ccc;
+  outline: none;
+}
+.inputbox input:is(:focus,:valid)
+{
+box-shadow:0 3px 6px rgba(0,0,0,0.2);   
+}
+.buttoncontainer{
+   margin: 15px 0;
+}
+.buttoncontainer button{
+width: 100%;
+  margin-top: 10px;
+  padding: 10px;
+  display: block;
+  font-size: 20px;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  background: var(--blue); ;
+
+}
+.buttoncontainer button:hover{
+  background: var(--gray);
+  color:var(--blue) ;
+}
+.form-popup {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+.btn {
+  background-color: #aa1704;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+
 /* nav */
 *{
   font-family: "ubuntu",sans-serif;
